--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-This is my home page.
-<a href="/about">About</a>
-</body>
-</html>
+---
+layout: default
+---
+This is index page
