home and about update

--- a/about.html
+++ b/about.html
@@ -1,4 +1,15 @@
 ---
 layout: default
 ---
-<div class="container">This is about page</div>
+<div class="container">
+    <h2>I am a Front End Engineer and...</h2>
+    <ul>
+        <li>5 years experience in large scale web app</li>
+        <li>solid javascript/html/css skills</li>
+        <li>full front-end solution including build/unit/e2e testing/performance </li>
+        <li>dig into the source code to figure out what really happened</li>
+        <li>keep my knowledge current and pick the right tools</li>
+    </ul>
+
+    <a href="mailto:junwangfriends@gmail.com">E-mail</a>
+</div>
