--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
 ---
 layout: blog
 ---
-<div class="container">This is about page content</div>
+<div class="container">This is blog page content</div>
